--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "tomli",
     "tomli-w",
     "boto3",
+    "msgpack",
 ]
 requires-python = ">=3.10"
 dynamic = ["version", "description"]
