add `tempbk download`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tomli-w",
     "boto3",
     "msgpack",
+    "humanfriendly",
 ]
 requires-python = ">=3.10"
 dynamic = ["version", "description"]
