--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "boto3",
     "msgpack",
     "humanfriendly",
+    "pyperclip",
 ]
 requires-python = ">=3.10"
 dynamic = ["version", "description"]
